# python_basic

./: readme.md  requirements-dev.txt  requirements.txt
homework_01/: README.md  main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  pyproject.toml
homework_03/web-app/: app.py  views.py
homework_04/: __init__.py  jsonplaceholder_requests.py  main.py  models.py  requirements.txt
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: !readme.txt  Dockerfile  config.py  docker-compose.yml  forms.py  main.py  requirements.txt
homework_06/migrations/versions/: cef76ccab2a6_create_table.py
homework_06/models/: database.py  product.py
homework_06/templates/: add.html  base.html  index.html  list.html
homework_07/: !readme.txt
homework_07/OrdersBook/: manage.py
homework_07/OrdersBook/employees/: admin.py  models.py  urls.py  views.py
homework_07/OrdersBook/orders/: urls.py  views.py
homework_08/: !readme.txt
homework_08/OrdersBook/OrdersBook/: asgi.py  settings.py  urls.py  wsgi.py
homework_08/OrdersBook/employees/: admin.py  forms.py  views.py
homework_08/OrdersBook/orders/: admin.py  urls.py
homework_09/: readme.txt
homework_09/ordersbook/: manage.py
homework_09/ordersbook/employees/: forms.py  models.py  urls.py  views.py
homework_09/ordersbook/myauth/: forms.py  models.py  urls.py  views.py
homework_09/ordersbook/orders/: models.py  views.py
homework_09/ordersbook/ordersbook/: asgi.py  settings.py  urls.py  wsgi.py
(+23 files in other folders)
